--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BeFitBlazor-a8ccdf51-648f-4a56-820c-ca91b6b56b64;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=befitblazor.db"
   },
   "Logging": {
     "LogLevel": {
